Add IAM Role tags
Closed #279

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -124,6 +124,13 @@ Resources:
                 Action:
                   - "codepipeline:GetPipelineState"
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   CodePipelineFailurePollerFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -177,6 +184,14 @@ Resources:
                 Effect: Allow
                 Resource:
                   - !GetAtt CodePipelineFailurePollerFunction.Arn
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   CodePipelineFailurePollerEventTrigger:
     Type: "AWS::Events::Rule"
     Properties:
@@ -483,6 +498,14 @@ Resources:
                 Resource:
                   - !GetAtt AcceptanceTestsCodeBuildProject.Arn
                   - !Sub "${AcceptanceTestsCodeBuildProject.Arn}/*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
                 # Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
@@ -893,6 +916,14 @@ Resources:
                   - "codepipeline:StartPipelineExecution"
                 Resource:
                   - !Sub "arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${Pipeline}"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   CdPipelineS3TriggerEventRule:
     Type: "AWS::Events::Rule"
     Properties:
@@ -972,6 +1003,14 @@ Resources:
                   - "ssm:GetParameters"
                 Resource:
                   - "*" # TODO
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   AcceptanceTestsCodeBuildProject:
     Type: "AWS::CodeBuild::Project"
     Properties:
@@ -1131,6 +1170,14 @@ Resources:
                   - "route53:*"
                   - "sns:*"
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   # Custom Lambda Actions
   LambdaExecutionIAMRole:
     # TODO This should probably be split up
@@ -1218,6 +1265,14 @@ Resources:
                   - "cloudformation:DescribeChangeSet"
                   - "cloudformation:DescribeStacks"
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   ChangeSetDeltaNotificationFunction:
     Type: "AWS::Lambda::Function"
     Properties:
