--- a/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
+++ b/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
@@ -68,6 +68,13 @@ Resources:
                   - "kinesis:PutRecords"
                 Resource:
                   - !Ref KinesisArn
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   LambdaSubscriptionFilter:
     Type: "AWS::Logs::SubscriptionFilter"
     Properties:
