--- a/cdn/feed-cdn.yml
+++ b/cdn/feed-cdn.yml
@@ -296,6 +296,13 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: !Ref ProjectTag
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   OriginRequestLambdaFunction:
     Type: AWS::Lambda::Function
     DeletionPolicy: Retain
