--- a/db/dynamodb-table.yml
+++ b/db/dynamodb-table.yml
@@ -143,6 +143,15 @@ Resources:
                   - "dynamodb:UpdateItem"
                 Resource:
                   - !GetAtt DynamoDBTable.Arn
+      Tags:
+        - Key: Project
+          Value: !Ref ProjectTag
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
 Outputs:
   TableArn:
     Description: The created DynamoDB table ARN
