--- a/etc/aws-daily-cost-report.yml
+++ b/etc/aws-daily-cost-report.yml
@@ -42,6 +42,13 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Admin
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ReportFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -195,7 +202,7 @@ Resources:
       Runtime: python3.6
       Tags:
         - Key: Project
-          Value: Misc
+          Value: Admin
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
@@ -224,6 +231,13 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt ReportFunction.Arn
+      Tags:
+        - Key: Project
+          Value: Admin
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ReportEventRule:
     Type: "AWS::Events::Rule"
     Properties:
