--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -264,6 +264,13 @@ Resources:
                 Resource:
                   - !GetAtt AcceptanceTestsCodeBuildProject.Arn
                   - !Sub "${AcceptanceTestsCodeBuildProject.Arn}/*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
@@ -553,6 +560,13 @@ Resources:
                   - ssm:GetParameters
                 Resource:
                   - "*" # TODO
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   AcceptanceTestsCodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -670,6 +684,13 @@ Resources:
                   - "s3:GetBucketAcl"
                   - "s3:PutBucketAcl" # TODO This one is a little scary
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   # Pipeline functions
   PublishEdgeLambdaVersionsFunctionIamRole:
     Type: AWS::IAM::Role
@@ -709,6 +730,13 @@ Resources:
                   - codepipeline:PutJobFailureResult
                   - codepipeline:GetPipelineState
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   DiscoverEdgeLambdaVersionsFunctionIamRole:
     Type: AWS::IAM::Role
     Properties:
@@ -757,6 +785,13 @@ Resources:
                   - codepipeline:PutJobFailureResult
                   - codepipeline:GetPipelineState
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ChangeSetDeltaNotificationFunctionIamRole:
     Type: AWS::IAM::Role
     Properties:
@@ -806,6 +841,13 @@ Resources:
                   - codepipeline:PutJobFailureResult
                   - codepipeline:GetPipelineState
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PublishEdgeLambdaVersionsFunction:
     Type: AWS::Lambda::Function
     Properties:
