--- a/etc/log-group-retention-policy-custom-resource.yml
+++ b/etc/log-group-retention-policy-custom-resource.yml
@@ -35,6 +35,13 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   LogGroupRetentionPolicyFunction:
     Type: "AWS::Lambda::Function"
     Properties:
