--- a/etc/publicfeeds-hostedzone-deploy.yml
+++ b/etc/publicfeeds-hostedzone-deploy.yml
@@ -101,6 +101,13 @@ Resources:
                   - "iam:PassRole"
                 Resource:
                   - !GetAtt CloudFormationIamRole.Arn
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
@@ -240,3 +247,10 @@ Resources:
                 Action:
                   - "route53:*"
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
