--- a/etc/resource-reporter.yml
+++ b/etc/resource-reporter.yml
@@ -38,6 +38,13 @@ Resources:
                   - !Ref SlackMessageRelayTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: cms.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PushSubscription:
     Type: "AWS::SNS::Subscription"
     Properties:
@@ -51,7 +58,7 @@ Resources:
       FunctionName: !GetAtt MessageHandlerFunction.Arn
       Principal: "sns.amazonaws.com"
       Action: "lambda:InvokeFunction"
-      SourceArn: !Ref ResourceSnsTopicArn 
+      SourceArn: !Ref ResourceSnsTopicArn
   MessageHandlerFunction:
     Type: "AWS::Lambda::Function"
     Properties:
