--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -120,6 +120,14 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Admin
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   LambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -196,6 +204,14 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt LambdaFunction.Arn
+      Tags:
+        - Key: Project
+          Value: Admin
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   EventsRule:
     Type: "AWS::Events::Rule"
     Properties:
