--- a/etc/squarespace-commerce-webhooks.yml
+++ b/etc/squarespace-commerce-webhooks.yml
@@ -80,6 +80,13 @@ Resources:
                   - !Ref SlackMessageRelayTopicArn
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   LambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -214,6 +221,8 @@ Resources:
       Role: !GetAtt LambdaIamRole.Arn
       Runtime: nodejs8.10
       Tags:
+        - Key: Project
+          Value: Misc
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
