--- a/etc/workable-poller.yml
+++ b/etc/workable-poller.yml
@@ -51,6 +51,13 @@ Resources:
                   - !Ref SlackMessageRelayTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PollerFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -193,6 +200,13 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt PollerFunction.Arn
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PollerEventRule:
     Type: "AWS::Events::Rule"
     Properties:
