--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -158,6 +158,13 @@ Resources:
                   - !Sub arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets/*
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   SecretsS3UpdateFunction:
     Type: "AWS::Lambda::Function"
     Properties:
