--- a/stacks/container-apps/scheduled-task.yml
+++ b/stacks/container-apps/scheduled-task.yml
@@ -34,6 +34,13 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole"
+      Tags:
+        - Key: Project
+          Value: ScheduledTask
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ScheduledRule:
     Type: "AWS::Events::Rule"
     Properties:
