--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -119,6 +119,13 @@ Resources:
                   - "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSAmiLookupFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -178,6 +185,13 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceRole"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSServiceAutoscaleIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -214,6 +228,13 @@ Resources:
                 Resource: "*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSInstanceIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -253,6 +274,13 @@ Resources:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
         - !Ref SecretsInstanceDecryptPolicyArn
         - !Ref SecretsInstanceAccessPolicyArn
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSInstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
@@ -602,6 +630,13 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AutoScalingNotificationAccessRole
       Path: "/"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSDrainLambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -655,6 +690,13 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AutoScalingNotificationAccessRole
       Path: "/"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ECSDrainHook:
     Type: "AWS::AutoScaling::LifecycleHook"
     DependsOn: "ECSDrainSNSTopic"
@@ -741,6 +783,13 @@ Resources:
                   - !Ref SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ASGSizerFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -790,6 +839,13 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt ASGSizerFunction.Arn
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ASGSizerInvokeFunctionPermission:
     Type: "AWS::Lambda::Permission"
     Properties:
