--- a/stacks/serverless/cms-image-lambda.yml
+++ b/stacks/serverless/cms-image-lambda.yml
@@ -68,6 +68,15 @@ Resources:
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: cms.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   CmsImageLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
