--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -393,6 +393,13 @@ Resources:
               - Effect: Allow
                 Action: "ec2:AcceptVpcPeeringConnection"
                 Resource: "*"
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
 Outputs:
   VPC:
     Description: >
