--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -187,6 +187,14 @@ Resources:
             !Sub "${InfrastructureSecretsStackName}-SecretsInstanceAccessPolicyArn"
         - Fn::ImportValue:
             !Sub "${InfrastructureSecretsStackName}-SecretsInstanceDecryptPolicyArn"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   CiCodeBuildProject:
     Type: "AWS::CodeBuild::Project"
     Properties:
@@ -359,6 +367,14 @@ Resources:
                       !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   CiStatusNotificationHandlerLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -473,6 +489,14 @@ Resources:
                   - !Ref GitHubEventSnsTopic
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   GitHubWebhookEndpointLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -596,6 +620,14 @@ Resources:
                   - !GetAtt CiCodeBuildProject.Arn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   GitHubEventSnsTopic:
     Type: "AWS::SNS::Topic"
   GitHubEventHandler2LambdaFunction:
@@ -743,6 +775,14 @@ Resources:
                       !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  CodePipelineFailurePollerFunction:
   CodeBuildCallbackSnsTopic:
     Type: "AWS::SNS::Topic"
   CodeBuildCallbackHandlerLambdaFunction:
