--- a/etc/commitchange-ses.yml
+++ b/etc/commitchange-ses.yml
@@ -61,6 +61,13 @@ Resources:
                   - !Ref SlackMessageRelayTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   MessageHandlerFunction:
     Type: AWS::Lambda::Function
     Properties:
