--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -88,6 +88,13 @@ Resources:
                   - !Ref SlackMessageRelayTopicArn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      Tags:
+        - Key: Project
+          Value: Mist
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   LambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -209,6 +216,8 @@ Resources:
       Role: !GetAtt LambdaIamRole.Arn
       Runtime: nodejs8.10
       Tags:
+        - Key: Project
+          Value: Misc
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
