Fix output attr

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -212,7 +212,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         ECSCluster: !Ref ECSCluster
-        WorkerServiceName: !GetAtt ExchangeStack.WorkerServiceName
+        WorkerServiceName: !GetAtt ExchangeStack.Outputs.WorkerServiceName
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
