Try just setting lowerbound

--- a/stacks/container-apps/exchange-alarms.yml
+++ b/stacks/container-apps/exchange-alarms.yml
@@ -64,7 +64,8 @@ Resources:
         - MetricIntervalLowerBound: -10
           MetricIntervalUpperBound: -9
           ScalingAdjustment: -2
-        - MetricIntervalUpperBound: 0
+        - MetricIntervalLowerBound: -9
+          MetricIntervalUpperBound: 0
           ScalingAdjustment: -1
   ExchangeWorkerAutoScalingScaleInAlarm:
     Type: "AWS::CloudWatch::Alarm"
