Improve CloudWatch Alarm SNS topic policies

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -526,32 +526,42 @@ Resources:
             Principal:
               AWS: !Ref SnsTopicPolicyPublishAllowanceAccountIds
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsDebugMessagesSnsTopic
           - Sid: OrganizationPublish
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsDebugMessagesSnsTopic
             Condition:
               "StringEquals":
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: CloudWatchAlarmsPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Publish
+            Resource: !Ref OpsDebugMessagesSnsTopic
+            Condition:
+              "ArnLike":
+                "aws:SourceArn": "arn:aws:cloudwatch:*:*:alarm:*"
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:GetTopicAttributes
-              - SNS:SetTopicAttributes
-              - SNS:AddPermission
-              - SNS:RemovePermission
-              - SNS:DeleteTopic
-              - SNS:Subscribe
-              - SNS:ListSubscriptionsByTopic
-              - SNS:Publish
-              - SNS:Receive
+              - sns:GetTopicAttributes
+              - sns:SetTopicAttributes
+              - sns:AddPermission
+              - sns:RemovePermission
+              - sns:DeleteTopic
+              - sns:Subscribe
+              - sns:ListSubscriptionsByTopic
+              - sns:Publish
+              - sns:Receive
             Resource: !Ref OpsDebugMessagesSnsTopic
             Condition:
               StringEquals:
@@ -572,32 +582,42 @@ Resources:
             Principal:
               AWS: !Ref SnsTopicPolicyPublishAllowanceAccountIds
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsInfoMessagesSnsTopic
           - Sid: OrganizationPublish
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsInfoMessagesSnsTopic
             Condition:
               "StringEquals":
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: CloudWatchAlarmsPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Publish
+            Resource: !Ref OpsInfoMessagesSnsTopic
+            Condition:
+              "ArnLike":
+                "aws:SourceArn": "arn:aws:cloudwatch:*:*:alarm:*"
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:GetTopicAttributes
-              - SNS:SetTopicAttributes
-              - SNS:AddPermission
-              - SNS:RemovePermission
-              - SNS:DeleteTopic
-              - SNS:Subscribe
-              - SNS:ListSubscriptionsByTopic
-              - SNS:Publish
-              - SNS:Receive
+              - sns:GetTopicAttributes
+              - sns:SetTopicAttributes
+              - sns:AddPermission
+              - sns:RemovePermission
+              - sns:DeleteTopic
+              - sns:Subscribe
+              - sns:ListSubscriptionsByTopic
+              - sns:Publish
+              - sns:Receive
             Resource: !Ref OpsInfoMessagesSnsTopic
             Condition:
               StringEquals:
@@ -618,39 +638,49 @@ Resources:
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsWarnMessagesSnsTopic
           - Sid: AccountPublish
             Effect: Allow
             Principal:
               AWS: !Ref SnsTopicPolicyPublishAllowanceAccountIds
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsWarnMessagesSnsTopic
           - Sid: OrganizationPublish
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsWarnMessagesSnsTopic
             Condition:
               "StringEquals":
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: CloudWatchAlarmsPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Publish
+            Resource: !Ref OpsWarnMessagesSnsTopic
+            Condition:
+              "ArnLike":
+                "aws:SourceArn": "arn:aws:cloudwatch:*:*:alarm:*"
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:GetTopicAttributes
-              - SNS:SetTopicAttributes
-              - SNS:AddPermission
-              - SNS:RemovePermission
-              - SNS:DeleteTopic
-              - SNS:Subscribe
-              - SNS:ListSubscriptionsByTopic
-              - SNS:Publish
-              - SNS:Receive
+              - sns:GetTopicAttributes
+              - sns:SetTopicAttributes
+              - sns:AddPermission
+              - sns:RemovePermission
+              - sns:DeleteTopic
+              - sns:Subscribe
+              - sns:ListSubscriptionsByTopic
+              - sns:Publish
+              - sns:Receive
             Resource: !Ref OpsWarnMessagesSnsTopic
             Condition:
               StringEquals:
@@ -671,32 +701,42 @@ Resources:
             Principal:
               AWS: !Ref SnsTopicPolicyPublishAllowanceAccountIds
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsErrorMessagesSnsTopic
           - Sid: OrganizationPublish
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsErrorMessagesSnsTopic
             Condition:
               "StringEquals":
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: CloudWatchAlarmsPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Publish
+            Resource: !Ref OpsErrorMessagesSnsTopic
+            Condition:
+              "ArnLike":
+                "aws:SourceArn": "arn:aws:cloudwatch:*:*:alarm:*"
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:GetTopicAttributes
-              - SNS:SetTopicAttributes
-              - SNS:AddPermission
-              - SNS:RemovePermission
-              - SNS:DeleteTopic
-              - SNS:Subscribe
-              - SNS:ListSubscriptionsByTopic
-              - SNS:Publish
-              - SNS:Receive
+              - sns:GetTopicAttributes
+              - sns:SetTopicAttributes
+              - sns:AddPermission
+              - sns:RemovePermission
+              - sns:DeleteTopic
+              - sns:Subscribe
+              - sns:ListSubscriptionsByTopic
+              - sns:Publish
+              - sns:Receive
             Resource: !Ref OpsErrorMessagesSnsTopic
             Condition:
               StringEquals:
@@ -717,32 +757,42 @@ Resources:
             Principal:
               AWS: !Ref SnsTopicPolicyPublishAllowanceAccountIds
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsFatalMessagesSnsTopic
           - Sid: OrganizationPublish
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:Publish
+              - sns:Publish
             Resource: !Ref OpsFatalMessagesSnsTopic
             Condition:
               "StringEquals":
                 "aws:PrincipalOrgID": !Ref SnsTopicPolicyPublishAllowanceOrganizationId
+          - Sid: CloudWatchAlarmsPublish
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - sns:Publish
+            Resource: !Ref OpsFatalMessagesSnsTopic
+            Condition:
+              "ArnLike":
+                "aws:SourceArn": "arn:aws:cloudwatch:*:*:alarm:*"
           - Sid: OwnerAllAccess
             Effect: Allow
             Principal:
               AWS: "*"
             Action:
-              - SNS:GetTopicAttributes
-              - SNS:SetTopicAttributes
-              - SNS:AddPermission
-              - SNS:RemovePermission
-              - SNS:DeleteTopic
-              - SNS:Subscribe
-              - SNS:ListSubscriptionsByTopic
-              - SNS:Publish
-              - SNS:Receive
+              - sns:GetTopicAttributes
+              - sns:SetTopicAttributes
+              - sns:AddPermission
+              - sns:RemovePermission
+              - sns:DeleteTopic
+              - sns:Subscribe
+              - sns:ListSubscriptionsByTopic
+              - sns:Publish
+              - sns:Receive
             Resource: !Ref OpsFatalMessagesSnsTopic
             Condition:
               StringEquals:
