--- a/etc/sample-step-functions.yml
+++ b/etc/sample-step-functions.yml
@@ -29,8 +29,8 @@ Resources:
                 Resource:
                   - !Ref StateMachine
       Tags:
-        - Key: Example
-          Value: Infrastructure
+        - Key: Project
+          Value: Example
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
