Add Squarespace records for Passenger List

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -160,3 +160,19 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub zendesk4.${Domain}
+  Squarespace:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Squarespace
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - ext-cust.squarespace.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub tips.${Domain}
+        - ResourceRecords:
+            - verify.squarespace.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub nf8gb8p5tektybgbg6m5.${Domain}
