Add join.passengerlist.org DNS

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -55,6 +55,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub _bb6e020f8890ff1d2a083b3f48fe9130.departures.${Domain}
+        - ResourceRecords:
+            - _5bb50ac22f4316417edde72b9c7eba26.olprtlswtu.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _a01b496f93bfcdcca5f27247b8a8dd85.join.${Domain}
   Website:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -96,6 +101,18 @@ Resources:
           Name: !Sub departures.${Domain}
           AliasTarget:
             DNSName: dy5vx28117t1e.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub join.${Domain}
+          AliasTarget:
+            DNSName: dp4dtvfg6d3y4.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub join.${Domain}
+          AliasTarget:
+            DNSName: dp4dtvfg6d3y4.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
   Text:
